--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,33 @@
 {
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "Attach to .NET Functions",
-            "type": "coreclr",
-            "request": "attach",
-            "processId": "${command:azureFunctions.pickProcess}"
+      {
+        "name": ".NET Core Launch (Console)",
+        "type": "coreclr",
+        "request": "launch",
+        "preLaunchTask": "build",
+        "program": "${workspaceFolder}/tests/ImageProcessorTest/bin/Debug/net8.0/ImageProcessorTest.dll",
+        "args": [],
+        "cwd": "${workspaceFolder}/tests/ImageProcessorTest",
+        "stopAtEntry": false,
+        "console": "internalConsole",
+        "logging": {
+          "moduleLoad": false
         }
+      },
+      {
+        "name": "Azure Functions",
+        "type": "coreclr",
+        "request": "launch",
+        "preLaunchTask": "build",
+        "program": "${workspaceFolder}/bin/Debug/net8.0/blobuploader-imageprocessor.dll",
+        "args": [],
+        "cwd": "${workspaceFolder}",
+        "stopAtEntry": false,
+        "console": "internalConsole",
+        "logging": {
+          "moduleLoad": false
+        }
+      }
     ]
-}
+  }
