try again with diff app

--- a/.github/workflows/main_mye28blobuploader.yml
+++ b/.github/workflows/main_mye28blobuploader.yml
@@ -46,7 +46,7 @@ jobs:
         uses: Azure/functions-action@v1
         id: fa
         with:
-          app-name: 'mye28blobuploader'
+          app-name: 'mye28imageprocessor'
           slot-name: 'Production'
           package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
           
