--- a/tests/ImageProcessorTest/ImageProcessorTest.csproj
+++ b/tests/ImageProcessorTest/ImageProcessorTest.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="System.Text.Json" Version="6.0.10" />
 
